# AlphaFlip

./: .gitignore  .gitmodules  AGENTS.md  README.md  TASKS.md  deep-research-report.md  pyproject.toml
.agent/: PLANS.md
apps/: build_dashboard.py  capture_metascalp_private.py  collect_market.py  compare_demo_fills.py  compare_replay_paper_pnl.py  daily_summary.py  dashboard_screenshot_smoke.py  export_replay_parquet.py  health_check.py  hydrate_universe.py  metascalp_demo_cancel.py  metascalp_demo_order.py  operator_console.py  plan_metascalp_order.py  probe_metascalp.py  reconcile_metascalp_updates.py  refresh_dashboard.py  replay_backtest.py  replay_day.py  runner_live.py  runner_metascalp_demo.py  runner_paper.py  serve_dashboard.py  store_metascalp_reconcile.py
conf/: config.example.yaml
docs/: ARCHITECTURE.md  RUNBOOK.md
leadlag_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
llbot/: __init__.py  config.py
memory/: memory.json  notes.md
reports/: current_execplan.md  daily_summary_smoke.json  dashboard.html  dashboard_screenshot_smoke.json  demo_fill_compare_smoke.json  health_check_metascalp_smoke.json  health_check_smoke.json  latest_test_report.md  metascalp_demo_cancel_dry_run_smoke.json  metascalp_demo_order_dry_run_smoke.json  metascalp_demo_order_manual_submit_tiny.json  metascalp_demo_runner_dry_smoke.json  metascalp_demo_runner_live_dry_both_streams.json  metascalp_demo_runner_live_dry_smoke.json  metascalp_demo_runner_manual_submit_paper.jsonl  metascalp_demo_runner_manual_submit_summary.json  metascalp_updates_smoke.jsonl  (+25 more)
(+117 files in other folders)
